# roll20_template

./: .gitignore  Cargo.toml  README.md  package-lock.json  tailwind.config.js
src/: main.rs
src/css/: _catppuccin_color.scss  input.css  input.scss
src/template/: partials.json  template.hbs  variables.json
src/template/components/: rollMacro.hbs
src/template/parts/: advancement.hbs  background.hbs  equipment.hbs  infosBar.hbs  partTabs.hbs  ressources.hbs  rollTemplate.hbs  skillsTab.hbs
src/template/script/: script.hbs
