[package]
name = "roll20_template"
version = "0.1.0"
authors = ["Paul Veber <paulveber56@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
handlebars = "4.1.2"
serde = { version = "1.0.130",features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0"
grass = "0.10.7"